# youtube-analytics-project

./: .gitignore  pyproject.toml
src/: channel.py  playlist.py  video.py  yt_request_func.py
